force-app/main/default/objects/RTL_Referral__c/fields/RTL_First_Contacted_Segment__c.field-meta.xml
<CustomField>
    <fullName>RTL_First_Contacted_Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Contacted Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>