force-app/main/default/objects/RTL_Referral__c/fields/RTL_FirstName__c.field-meta.xml
<CustomField>
    <fullName>RTL_FirstName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>