force-app/main/default/objects/RTL_Referral__c/fields/RTL_From_Call_Me_Now__c.field-meta.xml
<CustomField>
    <fullName>RTL_From_Call_Me_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CR Call Me Now to check if trigger is called from call me now service</description>
    <label>From Call Me Now</label>
    <type>Checkbox</type>
</CustomField>