force-app/main/default/objects/RTL_Referral__c/fields/RTL_HelpText__c.field-meta.xml
<CustomField>
    <fullName>RTL_HelpText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ระบุชื่อสกุล กรณีที่ไม่ใช่ลูกค้าปัจจุบัน</label>
    <length>255</length>
    <type>Text</type>
</CustomField>