force-app/main/default/objects/RTL_Referral__c/fields/RTL_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_ID_Type__c</fullName>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Citizen ID</fullName>
            </value>
            <value>
                <fullName>Passport ID</fullName>
            </value>
            <value>
                <fullName>Work permit ID</fullName>
            </value>
            <value>
                <fullName>Alien ID</fullName>
            </value>
            <value>
                <fullName>Tax ID</fullName>
            </value>
            <value>
                <fullName>Other ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>