force-app/main/default/objects/RTL_Referral__c/fields/RTL_Interested_Product__c.field-meta.xml
<CustomField>
    <fullName>RTL_Interested_Product__c</fullName>
    <label>Interested Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>RTL_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BA(Credit Life)</fullName>
            </value>
            <value>
                <fullName>BA (IL)</fullName>
            </value>
            <value>
                <fullName>BA (Unit Link)</fullName>
            </value>
            <value>
                <fullName>BA (Others)</fullName>
            </value>
            <value>
                <fullName>Business Click (Basic Plus)</fullName>
            </value>
            <value>
                <fullName>Business Click  (Basic Plus)</fullName>
            </value>
            <value>
                <fullName>Credit Card &amp; RDC</fullName>
            </value>
            <value>
                <fullName>EDC</fullName>
            </value>
            <value>
                <fullName>FX</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>OD</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Prompt Pay</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>TMB Business Touch</fullName>
            </value>
            <value>
                <fullName>TMB Business  Touch</fullName>
            </value>
            <value>
                <fullName>TMB QR</fullName>
            </value>
            <value>
                <fullName>TMB Payroll</fullName>
            </value>
            <value>
                <fullName>TMB SME One Bank (155)</fullName>
            </value>
            <value>
                <fullName>TMB SME One Bank  (155)</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>สินเชื่อเพื่อธุรกิจ - LG</fullName>
            </value>
            <value>
                <fullName>สินเชื่อเพื่อธุรกิจ - Loan</fullName>
            </value>
            <value>
                <fullName>Refer From TBANK: สินเชื่อเพื่อธุรกิจ - Loan</fullName>
            </value>
            <value>
                <fullName>สินเชื่อเพื่อธุรกิจ - OD</fullName>
            </value>
            <value>
                <fullName>สินเชื่อเพื่อธุรกิจ - Supply Chain [ODB (Clean)]</fullName>
            </value>
            <value>
                <fullName>สินเชื่อเพื่อธุรกิจ - Supply Chain [Factoring (Accepted Invoice)]</fullName>
            </value>
            <value>
                <fullName>สินเชื่อเพื่อธุรกิจ - Supply Chain [Factoring (Confirmed Payment)]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>