force-app/main/default/objects/RTL_Referral__c/fields/RTL_Is_Accept_Button__c.field-meta.xml
<CustomField>
    <fullName>RTL_Is_Accept_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Accept Button</label>
    <type>Checkbox</type>
</CustomField>