force-app/main/default/objects/RTL_Referral__c/fields/RTL_Is_BM__c.field-meta.xml
<CustomField>
    <fullName>RTL_Is_BM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is BM</label>
    <type>Checkbox</type>
</CustomField>