force-app/main/default/objects/RTL_Referral__c/fields/RTL_Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>RTL_Is_Owner__c</fullName>
    <formula>IF(Owner:User.Id =  $User.Id ,True,False)</formula>
    <label>IsOwner</label>
    <type>Checkbox</type>
</CustomField>