force-app/main/default/objects/RTL_Referral__c/fields/RTL_Is_Wealth_Invitation__c.field-meta.xml
<CustomField>
    <fullName>RTL_Is_Wealth_Invitation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For tracking customer from wealth invitation</description>
    <label>Is Wealth Invitation</label>
    <type>Checkbox</type>
</CustomField>