force-app/main/default/objects/RTL_Referral__c/fields/RTL_IsCreator__c.field-meta.xml
<CustomField>
    <fullName>RTL_IsCreator__c</fullName>
    <formula>IF( CreatedBy.Employee_ID__c = $User.Employee_ID__c ,True,False)</formula>
    <label>IsCreator</label>
    <type>Checkbox</type>
</CustomField>