force-app/main/default/objects/RTL_Referral__c/fields/RTL_IsCreatorRegion__c.field-meta.xml
<CustomField>
    <fullName>RTL_IsCreatorRegion__c</fullName>
    <formula>IF(CreatedBy.Region_Code__c =  $User.Region_Code__c ,True,false)</formula>
    <label>IsCreatorRegion</label>
    <type>Checkbox</type>
</CustomField>