force-app/main/default/objects/RTL_Referral__c/fields/RTL_IsOwnerRegion__c.field-meta.xml
<CustomField>
    <fullName>RTL_IsOwnerRegion__c</fullName>
    <formula>IF(RTL_Owner_Region_Code__c =  $User.Region_Code__c ,true,false)</formula>
    <label>Is Owner Region</label>
    <type>Checkbox</type>
</CustomField>