force-app/main/default/objects/RTL_Referral__c/fields/RTL_IsReferralinmyBranch__c.field-meta.xml
<CustomField>
    <fullName>RTL_IsReferralinmyBranch__c</fullName>
    <formula>IF($User.RTL_Branch_Code__c =  RTL_Owner_Branch_Code__c,true,false )</formula>
    <label>Is Referral in my Branch</label>
    <type>Checkbox</type>
</CustomField>