force-app/main/default/objects/RTL_Referral__c/fields/RTL_isUserinQueue__c.field-meta.xml
<CustomField>
    <fullName>RTL_isUserinQueue__c</fullName>
    <formula>CONTAINS(Owner:Queue.DeveloperName,$User.RTL_Branch_Code__c) &amp;&amp; NOT(ISBLANK($User.RTL_Branch_Code__c))</formula>
    <label>isUserinQueue</label>
    <type>Checkbox</type>
</CustomField>