force-app/main/default/objects/RTL_Referral__c/fields/RTL_Last_Assigned_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Last_Assigned_Branch_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Assigned Branch / Team Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>