force-app/main/default/objects/RTL_Referral__c/fields/RTL_Last_Assigned_Date_time__c.field-meta.xml
<CustomField>
    <fullName>RTL_Last_Assigned_Date_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Assigned Date/time</label>
    <type>DateTime</type>
</CustomField>