force-app/main/default/objects/RTL_Referral__c/fields/RTL_Lead_Group__c.field-meta.xml
<CustomField>
    <fullName>RTL_Lead_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Group</label>
    <length>200</length>
    <type>Text</type>
</CustomField>