force-app/main/default/objects/RTL_Referral__c/fields/RTL_Lead_Score_Flag__c.field-meta.xml
<CustomField>
    <fullName>RTL_Lead_Score_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Score Flag</label>
    <type>Checkbox</type>
</CustomField>