force-app/main/default/objects/RTL_Referral__c/fields/RTL_LeadSource__c.field-meta.xml
<CustomField>
    <fullName>RTL_LeadSource__c</fullName>
    <label>LeadSource</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>by Sale Management</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>CM Referral</fullName>
            </value>
            <value>
                <fullName>Credit System</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Marketing event</fullName>
            </value>
            <value>
                <fullName>Refer from branch</fullName>
            </value>
            <value>
                <fullName>Refer from customer</fullName>
            </value>
            <value>
                <fullName>Refer from RM/BDM</fullName>
            </value>
            <value>
                <fullName>Refer from RMC</fullName>
            </value>
            <value>
                <fullName>Refer from TBANK</fullName>
            </value>
            <value>
                <fullName>Walk In / Call in</fullName>
            </value>
            <value>
                <fullName>Walk-in customer</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Others Referral</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Refer within Commercial</fullName>
            </value>
            <value>
                <fullName>Biztouch</fullName>
            </value>
            <value>
                <fullName>Hiring Lead</fullName>
            </value>
            <value>
                <fullName>ลูกค้าเดิมจากที่อื่นๆ</fullName>
            </value>
            <value>
                <fullName>คนรู้จัก</fullName>
            </value>
            <value>
                <fullName>EDM</fullName>
            </value>
            <value>
                <fullName>FB Boost Post</fullName>
            </value>
            <value>
                <fullName>FB Dark post</fullName>
            </value>
            <value>
                <fullName>Line</fullName>
            </value>
            <value>
                <fullName>SEM</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>TBANK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>