force-app/main/default/objects/RTL_Referral__c/fields/RTL_Mobile1__c.field-meta.xml
<CustomField>
    <fullName>RTL_Mobile1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile1</label>
    <type>Phone</type>
</CustomField>