force-app/main/default/objects/RTL_Referral__c/fields/RTL_Office_Number__c.field-meta.xml
<CustomField>
    <fullName>RTL_Office_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>