force-app/main/default/objects/RTL_Referral__c/fields/RTL_Owner_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Owner_Branch_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner&apos;s Branch / Team Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>