force-app/main/default/objects/RTL_Referral__c/fields/RTL_Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>RTL_Owner_Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner&apos;s Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>