force-app/main/default/objects/RTL_Referral__c/fields/RTL_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>RTL_Owner_Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner&apos;s Role</label>
    <length>250</length>
    <type>Text</type>
</CustomField>