force-app/main/default/objects/RTL_Referral__c/fields/RTL_Owner_Zone__c.field-meta.xml
<CustomField>
    <fullName>RTL_Owner_Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner&apos;s Zone/Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>