force-app/main/default/objects/RTL_Referral__c/fields/RTL_Phone1__c.field-meta.xml
<CustomField>
    <fullName>RTL_Phone1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>