force-app/main/default/objects/RTL_Referral__c/fields/RTL_Position__c.field-meta.xml
<CustomField>
    <fullName>RTL_Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner/Decision Maker</fullName>
            </value>
            <value>
                <fullName>Shareholder</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>