force-app/main/default/objects/RTL_Referral__c/fields/RTL_Preferred_Branch__c.field-meta.xml
<CustomField>
    <fullName>RTL_Preferred_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>สาขาที่ไม่รับบริการคือ สาขา Flagship ได้แก่ ไอคอน สยาม (283) และ อาคารยูไนเต็ด เซ็นเตอร์ สีลม (252), ระบุ WAT เพื่อส่งให้ Investment Line, ระบุ DSA เพื่อส่งให้ Mortgage Sales</inlineHelpText>
    <label>Preferred Branch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Branch_and_Zone__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Branch_and_Zone__c</referenceTo>
    <relationshipLabel>Referral Layout</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>