force-app/main/default/objects/RTL_Referral__c/fields/RTL_Preferred_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Preferred_Branch_Code__c</fullName>
    <description>used in web to referral</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Branch Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>