force-app/main/default/objects/RTL_Referral__c/fields/RTL_Preferred_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Preferred_Branch_Name__c</fullName>
    <formula>RTL_Preferred_Branch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Branch Name</label>
    <type>Text</type>
</CustomField>