force-app/main/default/objects/RTL_Referral__c/fields/RTL_Preferred_Branch_Type__c.field-meta.xml
<CustomField>
    <fullName>RTL_Preferred_Branch_Type__c</fullName>
    <description>To get Preferred Branch Type from Branch and Zone Object.</description>
    <formula>TEXT(RTL_Preferred_Branch__r.Branch_Type__c)</formula>
    <label>Preferred Branch Type</label>
    <type>Text</type>
</CustomField>