force-app/main/default/objects/RTL_Referral__c/fields/RTL_Preferred_Staff__c.field-meta.xml
<CustomField>
    <fullName>RTL_Preferred_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Search by Name/Emp ID/Branch code</inlineHelpText>
    <label>Preferred Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>