force-app/main/default/objects/RTL_Referral__c/fields/RTL_Privilege__c.field-meta.xml
<CustomField>
    <fullName>RTL_Privilege__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Privilege</label>
    <length>255</length>
    <type>Text</type>
</CustomField>