force-app/main/default/objects/RTL_Referral__c/fields/RTL_Product_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_Campaign_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Campaign Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>