force-app/main/default/objects/RTL_Referral__c/fields/RTL_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_Group__c</fullName>
    <formula>RTL_Product_Name__r.Product_Group__c</formula>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>