force-app/main/default/objects/RTL_Referral__c/fields/RTL_Product_Group_PickList__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_Group_PickList__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Retail_Product_Group</valueSetName>
    </valueSet>
</CustomField>