force-app/main/default/objects/RTL_Referral__c/fields/RTL_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>RTL_product_master__c.Product_Group__c</field>
            <operation>notEqual</operation>
            <value>Loan Retention</value>
        </filterItems>
        <filterItems>
            <field>RTL_product_master__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RTL_product_master__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>