force-app/main/default/objects/RTL_Referral__c/fields/RTL_Product_Name_Str__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_Name_Str__c</fullName>
    <formula>RTL_Product_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name Str</label>
    <type>Text</type>
</CustomField>