force-app/main/default/objects/RTL_Referral__c/fields/RTL_Reason__c.field-meta.xml
<CustomField>
    <fullName>RTL_Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RTL_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Answering machine</fullName>
            </value>
            <value>
                <fullName>Busy line</fullName>
            </value>
            <value>
                <fullName>Call cutoff</fullName>
            </value>
            <value>
                <fullName>Channel - Inconvenient</fullName>
            </value>
            <value>
                <fullName>Credit Issue</fullName>
            </value>
            <value>
                <fullName>Customer - Adequate product holding</fullName>
            </value>
            <value>
                <fullName>Customer - Dissatisfaction with bank</fullName>
            </value>
            <value>
                <fullName>Customer Policy</fullName>
                <label>Customer - Policy</label>
            </value>
            <value>
                <fullName>Customer - Relationship with other bank</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Not answer line</fullName>
            </value>
            <value>
                <fullName>Not Industry focus</fullName>
            </value>
            <value>
                <fullName>Product - Credit Condition</fullName>
            </value>
            <value>
                <fullName>Product - Pricing</fullName>
            </value>
            <value>
                <fullName>Product - Product not match</fullName>
            </value>
            <value>
                <fullName>Product - Timing</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
                <label>Re-finance</label>
            </value>
            <value>
                <fullName>Receiver is not prospect</fullName>
            </value>
            <value>
                <fullName>TMB - Reputation concern</fullName>
            </value>
            <value>
                <fullName>Wrong number</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Change in customer decision</fullName>
            </value>
            <value>
                <fullName>Incomplete/Incorrect order information</fullName>
            </value>
            <value>
                <fullName>No e-mail address</fullName>
            </value>
            <value>
                <fullName>Mismatched Mobile number</fullName>
            </value>
            <value>
                <fullName>Suitability expired</fullName>
            </value>
            <value>
                <fullName>Unable to contact customer 3 times</fullName>
            </value>
            <value>
                <fullName>ประสบการณ์ธุรกิจไม่เป็นไปตามเกณฑ์</fullName>
            </value>
            <value>
                <fullName>ไม่มีหลักทรัพย์ค้ำประกัน</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>