force-app/main/default/objects/RTL_Referral__c/fields/RTL_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_RecordType_Name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordType Name</label>
    <type>Text</type>
</CustomField>