force-app/main/default/objects/RTL_Referral__c/fields/RTL_Refer__c.field-meta.xml
<CustomField>
    <fullName>RTL_Refer__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#Refer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>