force-app/main/default/objects/RTL_Referral__c/fields/RTL_Refer_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>RTL_Refer_Branch_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referred by Branch / Team Name (Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>