force-app/main/default/objects/RTL_Referral__c/fields/RTL_Referral_Assignment__c.field-meta.xml
<CustomField>
    <fullName>RTL_Referral_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Assignment</label>
    <referenceTo>RTL_Referral_Assignment__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>