force-app/main/default/objects/RTL_Referral__c/fields/RTL_ReferralOwner__c.field-meta.xml
<CustomField>
    <fullName>RTL_ReferralOwner__c</fullName>
    <formula>IF(ISBLANK(Owner:User.Id) ,HYPERLINK(&quot;/&quot; &amp; Owner:Queue.Id,Owner:Queue.Name), HYPERLINK(&quot;/&quot; &amp; Owner:User.Id , Owner:User.FirstName +&quot; &quot;+ Owner:User.LastName ))</formula>
    <label>Referral Owner</label>
    <type>Text</type>
</CustomField>