force-app/main/default/objects/RTL_Referral__c/fields/RTL_Referred_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Referred_Date__c</fullName>
    <description>Keep Referred Date in Date format to be used in Aging Calculation exclude weekend</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Referred Date</label>
    <type>Date</type>
</CustomField>