force-app/main/default/objects/RTL_Referral__c/fields/RTL_Referred_Date_time__c.field-meta.xml
<CustomField>
    <fullName>RTL_Referred_Date_time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referred Date/time</label>
    <type>DateTime</type>
</CustomField>