force-app/main/default/objects/RTL_Referral__c/fields/RTL_Region_Group__c.field-meta.xml
<CustomField>
    <fullName>RTL_Region_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referred by Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>