force-app/main/default/objects/RTL_Referral__c/fields/RTL_Region_Team_Code__c.field-meta.xml
<CustomField>
    <fullName>RTL_Region_Team_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referred by Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>