force-app/main/default/objects/RTL_Referral__c/fields/RTL_Remark_from_Online_Loan__c.field-meta.xml
<CustomField>
    <fullName>RTL_Remark_from_Online_Loan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remark from Online Loan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>